# Life

./: .gitignore  Life.py  pyproject.toml  requirements.txt
